--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -286,22 +286,23 @@ body {
 				padding   : 5px 0 5px 10%;
 				width     : 100%;
 				font-size : 22px;
-				color     : $white-main;
+				color     : #006512;
 				font-style: normal;
-				text-align: left;
-				background: rgba(82,66,49,0.8);
-				background: -moz-linear-gradient(left, rgba(82,66,49,0.8) 41%, rgba(82,66,49,0.34) 75%, rgba(255,255,255,0) 100%);
-				background: -webkit-gradient(left top, right top, color-stop(41%, rgba(82,66,49,0.8)), color-stop(75%, rgba(0,0,0,0.34)), color-stop(100%, rgba(255,255,255,0)));
-				background: -webkit-linear-gradient(left, rgba(82,66,49,0.8) 41%, rgba(82,66,49,0.34) 75%, rgba(255,255,255,0) 100%);
-				background: -o-linear-gradient(left, rgba(82,66,49,0.8) 41%, rgba(82,66,49,0.34) 75%, rgba(255,255,255,0) 100%);
-				background: -ms-linear-gradient(left, rgba(82,66,49,0.8) 41%, rgba(82,66,49,0.34) 75%, rgba(255,255,255,0) 100%);
-				background: linear-gradient(to right, rgba(82,66,49,0.8) 41%, rgba(82,66,49,0.34) 75%, rgba(255,255,255,0) 100%);
-				filter    : progid:DXImageTransform.Microsoft.gradient( startColorstr='#524231', endColorstr='#ffffff', GradientType=1 );
+
 				@include transitionStyle( all, .2s, ease-out );
 			}
-			&:hover {
+
+			@media ( min-width: $screen-sm )
+			{
 				p {
-					@include translateStyle( -5px, 0px );
+					padding: 5px 40px 5px 10%;
+				}
+
+				&:nth-child(1n) {
+					text-align: right;
+				}
+				&:nth-child(2n) {
+					text-align: left;
 				}
 			}
 		}
@@ -329,7 +330,7 @@ body {
 	left            : 0;
 	right           : 0;
 	bottom          : 0;
-	background-color: #aec1ae;
+	background-color: transparent;
 	opacity         : .6;
 	@include transitionStyle( all, .5s, ease-in-out );
 }
@@ -466,12 +467,20 @@ body {
 .svg-check {
 	display    : none;
 	position   : absolute;
-	top        : 50%;
+	top        : 40%;
 	left       : 50%;
 	margin-left: -20px;
 	margin-top : -20px;
 	width      : 40px;
 	height     : 40px;
+}
+
+.li-gradient-overlay {
+	position: absolute;
+	top: 0;
+	right: 0;
+	left: 0;
+	bottom: 0;
 }
 
 .chosen-park-list {
@@ -555,19 +564,57 @@ footer {
 
 .number-zoom {
 	@include animationFunc( numberZoomAni, 1.5s, forwards );
-	-webkit-animation-timing-function: linear;
-	-moz-animation-timing-function: linear;
-	-o-animation-timing-function: linear;
-	animation-timing-function: linear;
+	-webkit-animation-timing-function: cubic-bezier(.17,.67,.83,.67);
+	-moz-animation-timing-function: cubic-bezier(.17,.67,.83,.67);
+	-o-animation-timing-function: cubic-bezier(.17,.67,.83,.67);
+	animation-timing-function: cubic-bezier(.17,.67,.83,.67);
 }
 
 .fade-in-and-up {
 	@include animationFunc( fadeInAndUp, 1s, forwards );
 }
 
+.li-click {
+	@include animationFunc( liButtonClick, .5s, forwards);
+	transform: perspective(200px) translateZ(0);
+}
+
+.li-click-text {
+	@include animationFunc( liButtonClickText, 1s, forwards);
+	-webkit-animation-timing-function: linear;
+	-moz-animation-timing-function: linear;
+	-o-animation-timing-function: linear;
+	animation-timing-function: linear;
+	transform: perspective(200px) translateZ(0);
+}
+
 
 
 /* KEY FRAMES */
+
+@keyframes liButtonClick {
+   0% {
+		transform: scale(1,1);
+    }
+    50% {
+    	transform: scale(1.05,1.05);
+    }
+    100% {
+    	transform: scale(1,1);
+    }
+}
+
+@keyframes liButtonClickText {
+   	0% {
+		opacity: 0;
+    }
+    55% {
+		opacity: 0;
+    }
+    100% {
+    	opacity: 1;
+    }
+}
 
 @-webkit-keyframes fadeInAndUp {
    0% {
