--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -9024,33 +9024,30 @@ body {
   padding: 5px 0 5px 10%;
   width: 100%;
   font-size: 22px;
-  color: #f7f7f7;
+  color: #006512;
   font-style: normal;
-  text-align: left;
-  background: rgba(82, 66, 49, 0.8);
-  background: -moz-linear-gradient(left, rgba(82, 66, 49, 0.8) 41%, rgba(82, 66, 49, 0.34) 75%, rgba(255, 255, 255, 0) 100%);
-  background: -webkit-gradient(left top, right top, color-stop(41%, rgba(82, 66, 49, 0.8)), color-stop(75%, rgba(0, 0, 0, 0.34)), color-stop(100%, rgba(255, 255, 255, 0)));
-  background: -webkit-linear-gradient(left, rgba(82, 66, 49, 0.8) 41%, rgba(82, 66, 49, 0.34) 75%, rgba(255, 255, 255, 0) 100%);
-  background: -o-linear-gradient(left, rgba(82, 66, 49, 0.8) 41%, rgba(82, 66, 49, 0.34) 75%, rgba(255, 255, 255, 0) 100%);
-  background: -ms-linear-gradient(left, rgba(82, 66, 49, 0.8) 41%, rgba(82, 66, 49, 0.34) 75%, rgba(255, 255, 255, 0) 100%);
-  background: linear-gradient(to right, rgba(82, 66, 49, 0.8) 41%, rgba(82, 66, 49, 0.34) 75%, rgba(255, 255, 255, 0) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#524231', endColorstr='#ffffff', GradientType=1 );
   -webkit-transition: all 0.2s ease-out;
   -moz-transition: all 0.2s ease-out;
   -ms-transition: all 0.2s ease-out;
   -o-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
 }
-/* line 303, ../sass/app.scss */
-.park-nav ul li:hover p {
-  -webkit-transform: translate(-5px, 0px);
-  -moz-transform: translate(-5px, 0px);
-  -ms-transform: translate(-5px, 0px);
-  -o-transform: translate(-5px, 0px);
-  transform: translate(-5px, 0px);
+@media (min-width: 768px) {
+  /* line 297, ../sass/app.scss */
+  .park-nav ul li p {
+    padding: 5px 40px 5px 10%;
+  }
+  /* line 301, ../sass/app.scss */
+  .park-nav ul li:nth-child(1n) {
+    text-align: right;
+  }
+  /* line 304, ../sass/app.scss */
+  .park-nav ul li:nth-child(2n) {
+    text-align: left;
+  }
 }
 
-/* line 311, ../sass/app.scss */
+/* line 312, ../sass/app.scss */
 .li-bg {
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
@@ -9059,27 +9056,27 @@ body {
   transition: all 0.2s ease-in-out;
   opacity: .9;
 }
-/* line 314, ../sass/app.scss */
+/* line 315, ../sass/app.scss */
 .li-bg:hover {
   cursor: pointer;
 }
-/* line 317, ../sass/app.scss */
+/* line 318, ../sass/app.scss */
 .li-bg:hover .li-overlay {
   background-color: #fff;
 }
-/* line 321, ../sass/app.scss */
+/* line 322, ../sass/app.scss */
 .li-bg:active {
   opacity: 1;
 }
 
-/* line 326, ../sass/app.scss */
+/* line 327, ../sass/app.scss */
 .li-overlay {
   position: absolute;
   top: 72.5%;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #aec1ae;
+  background-color: transparent;
   opacity: .6;
   -webkit-transition: all 0.5s ease-in-out;
   -moz-transition: all 0.5s ease-in-out;
@@ -9088,7 +9085,7 @@ body {
   transition: all 0.5s ease-in-out;
 }
 
-/* line 337, ../sass/app.scss */
+/* line 338, ../sass/app.scss */
 .li-overlay-white {
   position: absolute;
   top: 69%;
@@ -9098,25 +9095,25 @@ body {
   background-color: #fff;
 }
 
-/* line 346, ../sass/app.scss */
+/* line 347, ../sass/app.scss */
 .park-list-container {
   position: relative;
   width: 100%;
 }
 
-/* line 351, ../sass/app.scss */
+/* line 352, ../sass/app.scss */
 .park-distance-ul {
   overflow: hidden;
   width: 100%;
   height: 76px;
 }
 @media all and (min-width: 768px) {
-  /* line 351, ../sass/app.scss */
+  /* line 352, ../sass/app.scss */
   .park-distance-ul {
     height: auto;
   }
 }
-/* line 360, ../sass/app.scss */
+/* line 361, ../sass/app.scss */
 .park-distance-ul ul {
   margin: 0;
   padding: 0;
@@ -9125,12 +9122,12 @@ body {
   padding-bottom: 17px;
 }
 @media all and (min-width: 768px) {
-  /* line 360, ../sass/app.scss */
+  /* line 361, ../sass/app.scss */
   .park-distance-ul ul {
     padding-bottom: 0;
   }
 }
-/* line 371, ../sass/app.scss */
+/* line 372, ../sass/app.scss */
 .park-distance-ul ul li {
   list-style: none;
   position: relative;
@@ -9149,7 +9146,7 @@ body {
   -o-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
 }
-/* line 385, ../sass/app.scss */
+/* line 386, ../sass/app.scss */
 .park-distance-ul ul li:hover {
   opacity: .7;
   -webkit-transition: all 0.1s ease-in-out;
@@ -9158,7 +9155,7 @@ body {
   -o-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
 }
-/* line 390, ../sass/app.scss */
+/* line 391, ../sass/app.scss */
 .park-distance-ul ul li .number {
   font-size: 20px;
   display: inline-block;
@@ -9169,17 +9166,17 @@ body {
   color: #524231;
 }
 
-/* line 403, ../sass/app.scss */
+/* line 404, ../sass/app.scss */
 .park-selected {
   opacity: .5;
 }
 
-/* line 407, ../sass/app.scss */
+/* line 408, ../sass/app.scss */
 .park-selected-official {
   border: 6px solid #524231 !important;
 }
 
-/* line 411, ../sass/app.scss */
+/* line 412, ../sass/app.scss */
 .number-overlay {
   font-size: 62px;
   display: inline-block;
@@ -9198,30 +9195,30 @@ body {
   transform: scale(0.5, 0.5);
 }
 
-/* line 425, ../sass/app.scss */
+/* line 426, ../sass/app.scss */
 .park-info-cont {
   padding: 0;
   margin: 0;
 }
-/* line 429, ../sass/app.scss */
+/* line 430, ../sass/app.scss */
 .park-info-cont li {
   display: block;
   white-space: nowrap;
 }
 
-/* line 435, ../sass/app.scss */
+/* line 436, ../sass/app.scss */
 .park-images-ul {
   overflow: hidden;
   width: 100%;
   height: 125px;
 }
 @media all and (min-width: 768px) {
-  /* line 435, ../sass/app.scss */
+  /* line 436, ../sass/app.scss */
   .park-images-ul {
     height: auto;
   }
 }
-/* line 444, ../sass/app.scss */
+/* line 445, ../sass/app.scss */
 .park-images-ul ul {
   margin: 0;
   padding: 0;
@@ -9230,26 +9227,26 @@ body {
   padding-bottom: 17px;
 }
 @media all and (min-width: 768px) {
-  /* line 444, ../sass/app.scss */
+  /* line 445, ../sass/app.scss */
   .park-images-ul ul {
     padding-bottom: 0;
   }
 }
-/* line 455, ../sass/app.scss */
+/* line 456, ../sass/app.scss */
 .park-images-ul ul li {
   display: inline-block;
   padding-right: 5px;
 }
-/* line 459, ../sass/app.scss */
+/* line 460, ../sass/app.scss */
 .park-images-ul ul li img {
   height: 125px;
 }
 
-/* line 466, ../sass/app.scss */
+/* line 467, ../sass/app.scss */
 .svg-check {
   display: none;
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   margin-left: -20px;
   margin-top: -20px;
@@ -9257,7 +9254,16 @@ body {
   height: 40px;
 }
 
-/* line 477, ../sass/app.scss */
+/* line 478, ../sass/app.scss */
+.li-gradient-overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+}
+
+/* line 486, ../sass/app.scss */
 .chosen-park-list {
   position: fixed;
   top: auto;
@@ -9267,13 +9273,13 @@ body {
   background-color: white;
   opacity: .8;
 }
-/* line 486, ../sass/app.scss */
+/* line 495, ../sass/app.scss */
 .chosen-park-list ul {
   padding: 0;
   margin: 0;
   padding: 10px 0 10px 10px;
 }
-/* line 491, ../sass/app.scss */
+/* line 500, ../sass/app.scss */
 .chosen-park-list ul li {
   text-align: right;
   list-style: none;
@@ -9281,7 +9287,7 @@ body {
   font-size: 13px;
 }
 
-/* line 500, ../sass/app.scss */
+/* line 509, ../sass/app.scss */
 footer {
   color: #aec1ae;
   font-size: 10px;
@@ -9289,7 +9295,7 @@ footer {
 }
 
 /* TRANSITION SPECIFIC */
-/* line 512, ../sass/app.scss */
+/* line 521, ../sass/app.scss */
 .ani-left {
   -webkit-transform: translate3d(-2000px, 0, 0);
   -moz-transform: translate3d(-2000px, 0, 0);
@@ -9299,7 +9305,7 @@ footer {
   opacity: 0;
 }
 
-/* line 517, ../sass/app.scss */
+/* line 526, ../sass/app.scss */
 .ani-right {
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
@@ -9309,18 +9315,18 @@ footer {
   opacity: 1;
 }
 
-/* line 522, ../sass/app.scss */
+/* line 531, ../sass/app.scss */
 .ani-fadeOut {
   opacity: 0;
 }
 
-/* line 526, ../sass/app.scss */
+/* line 535, ../sass/app.scss */
 .ani-fadeIn {
   opacity: 1;
 }
 
 /* ANIMATION SPECIFIC */
-/* line 536, ../sass/app.scss */
+/* line 545, ../sass/app.scss */
 .zoom-check {
   -webkit-animation: zoomAni 0.5s forwards;
   -moz-animation: zoomAni 0.5s forwards;
@@ -9329,7 +9335,7 @@ footer {
   animation: zoomAni 0.5s forwards;
 }
 
-/* line 540, ../sass/app.scss */
+/* line 549, ../sass/app.scss */
 .zoom-check-reverse {
   -webkit-animation: zoomAniRev 0.5s forwards;
   -moz-animation: zoomAniRev 0.5s forwards;
@@ -9338,7 +9344,7 @@ footer {
   animation: zoomAniRev 0.5s forwards;
 }
 
-/* line 544, ../sass/app.scss */
+/* line 553, ../sass/app.scss */
 .zoom-check-shadow {
   -webkit-animation: zoomAniRevShadow 0.5s forwards;
   -moz-animation: zoomAniRevShadow 0.5s forwards;
@@ -9347,7 +9353,7 @@ footer {
   animation: zoomAniRevShadow 0.5s forwards;
 }
 
-/* line 548, ../sass/app.scss */
+/* line 557, ../sass/app.scss */
 .zoom-check-shadow-reverse {
   -webkit-animation: zoomAniRevShadowRev 0.5s forwards;
   -moz-animation: zoomAniRevShadowRev 0.5s forwards;
@@ -9356,7 +9362,7 @@ footer {
   animation: zoomAniRevShadowRev 0.5s forwards;
 }
 
-/* line 552, ../sass/app.scss */
+/* line 561, ../sass/app.scss */
 .slide-center {
   -webkit-animation: slideAni 0.5s forwards;
   -moz-animation: slideAni 0.5s forwards;
@@ -9365,20 +9371,20 @@ footer {
   animation: slideAni 0.5s forwards;
 }
 
-/* line 556, ../sass/app.scss */
+/* line 565, ../sass/app.scss */
 .number-zoom {
   -webkit-animation: numberZoomAni 1.5s forwards;
   -moz-animation: numberZoomAni 1.5s forwards;
   -ms-animation: numberZoomAni 1.5s forwards;
   -o-animation: numberZoomAni 1.5s forwards;
   animation: numberZoomAni 1.5s forwards;
-  -webkit-animation-timing-function: linear;
-  -moz-animation-timing-function: linear;
-  -o-animation-timing-function: linear;
-  animation-timing-function: linear;
+  -webkit-animation-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
+  -moz-animation-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
+  -o-animation-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
+  animation-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
 
-/* line 564, ../sass/app.scss */
+/* line 573, ../sass/app.scss */
 .fade-in-and-up {
   -webkit-animation: fadeInAndUp 1s forwards;
   -moz-animation: fadeInAndUp 1s forwards;
@@ -9387,7 +9393,53 @@ footer {
   animation: fadeInAndUp 1s forwards;
 }
 
+/* line 577, ../sass/app.scss */
+.li-click {
+  -webkit-animation: liButtonClick 0.5s forwards;
+  -moz-animation: liButtonClick 0.5s forwards;
+  -ms-animation: liButtonClick 0.5s forwards;
+  -o-animation: liButtonClick 0.5s forwards;
+  animation: liButtonClick 0.5s forwards;
+  transform: perspective(200px) translateZ(0);
+}
+
+/* line 582, ../sass/app.scss */
+.li-click-text {
+  -webkit-animation: liButtonClickText 1s forwards;
+  -moz-animation: liButtonClickText 1s forwards;
+  -ms-animation: liButtonClickText 1s forwards;
+  -o-animation: liButtonClickText 1s forwards;
+  animation: liButtonClickText 1s forwards;
+  -webkit-animation-timing-function: linear;
+  -moz-animation-timing-function: linear;
+  -o-animation-timing-function: linear;
+  animation-timing-function: linear;
+  transform: perspective(200px) translateZ(0);
+}
+
 /* KEY FRAMES */
+@keyframes liButtonClick {
+  0% {
+    transform: scale(1, 1);
+  }
+  50% {
+    transform: scale(1.05, 1.05);
+  }
+  100% {
+    transform: scale(1, 1);
+  }
+}
+@keyframes liButtonClickText {
+  0% {
+    opacity: 0;
+  }
+  55% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 @-webkit-keyframes fadeInAndUp {
   0% {
     opacity: 0;
