--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,7 +8,7 @@
 
 $dark-main : #71e271;
 $white-main: #f7f7f7;
-$btn-text  : #524231;
+$btn-text  : #502d07;
 $light-main: #00ca3e;
 $bg-color  : #ffffff;
 
@@ -128,9 +128,30 @@ body {
 }
 
 #park-info-name {
-	font-size: 20px;
-	margin: 10px 0;
+	font-size: 22px;
+	margin: 10px 0 5px 0;
+    padding: 5px 15px;
 	color: $light-main;
+	line-height: 20px;
+
+	// everything above an iphone 4/5
+	@media (min-width: 321px) {
+		font-size: 26px;
+		margin: 20px 0 20px 0;
+		line-height: 25px;
+	}
+}
+
+#park-info-directions {
+	font-size: 20px;
+	margin: 0 0 5px 0;
+    padding: 5px 15px;
+	color: $btn-text;
+
+	// everything above an iphone 4/5
+	@media (min-width: 321px) {
+		margin: 10px 0 10px 0;
+	}
 }
 
 
@@ -414,7 +435,8 @@ header {
 			position: relative;
 			display: inline-block;
 			height: 55px;
-			width: 55px;
+			width: auto;
+			padding: 0 10px;
 			border: 4px solid $dark-main;
 			margin: 0 1px;
 			font-size: 0;
@@ -425,7 +447,6 @@ header {
 
 			@media all and (min-width: $screen-sm) {
 				height: 75px;
-				width: 75px;
 				border: 6px solid $dark-main;
 			}
 
@@ -452,7 +473,11 @@ header {
 }
 
 .park-selected-official {
-	border: 6px solid $btn-text !important;
+	border: 4px solid $btn-text !important;
+
+	@media all and (min-width: $screen-sm) {
+		border: 6px solid $btn-text !important;
+	}
 }
 
 .number-overlay {
@@ -463,7 +488,7 @@ header {
 	left: 0;
 	right: 0;
 	bottom: 0;
-	margin-top: -44px;
+	margin-top: -45px;
 	color: $btn-text;
 	opacity: 0;
 	@include transformGeneral(scale( .5, .5 ));
@@ -474,7 +499,7 @@ header {
 	position: relative;
 
 	ul {
-		padding: 5px 15px;
+		padding: 0 15px;
 		margin: 0;
 		color: $btn-text;
 
