--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -8844,36 +8844,60 @@ body {
 
 /* line 130, ../sass/app.scss */
 #park-info-name {
-  font-size: 20px;
-  margin: 10px 0;
+  font-size: 22px;
+  margin: 10px 0 5px 0;
+  padding: 5px 15px;
   color: #00ca3e;
+  line-height: 20px;
+}
+@media (min-width: 321px) {
+  /* line 130, ../sass/app.scss */
+  #park-info-name {
+    font-size: 26px;
+    margin: 20px 0 20px 0;
+    line-height: 25px;
+  }
+}
+
+/* line 145, ../sass/app.scss */
+#park-info-directions {
+  font-size: 20px;
+  margin: 0 0 5px 0;
+  padding: 5px 15px;
+  color: #502d07;
+}
+@media (min-width: 321px) {
+  /* line 145, ../sass/app.scss */
+  #park-info-directions {
+    margin: 10px 0 10px 0;
+  }
 }
 
 /* GENERAL CLASSES */
-/* line 140, ../sass/app.scss */
+/* line 161, ../sass/app.scss */
 header {
   margin: 40px 30px;
 }
 
-/* line 144, ../sass/app.scss */
+/* line 165, ../sass/app.scss */
 .header-cont, .sub-header-cont {
   width: 640px;
   max-width: 100%;
   margin: 0 auto;
 }
-/* line 149, ../sass/app.scss */
+/* line 170, ../sass/app.scss */
 .header-cont svg, .sub-header-cont svg {
   width: 50px;
   height: auto;
   float: left;
 }
 
-/* line 156, ../sass/app.scss */
+/* line 177, ../sass/app.scss */
 .sub-header-cont {
   padding: 10px 10px;
 }
 
-/* line 161, ../sass/app.scss */
+/* line 182, ../sass/app.scss */
 .title {
   letter-spacing: 2px;
   font-weight: 700;
@@ -8889,7 +8913,7 @@ header {
   transition: all 0.1s ease-in-out;
 }
 @media (min-width: 768px) {
-  /* line 161, ../sass/app.scss */
+  /* line 182, ../sass/app.scss */
   .title {
     font-size: 36px;
     padding: 0 0 0 30px;
@@ -8897,7 +8921,7 @@ header {
   }
 }
 
-/* line 179, ../sass/app.scss */
+/* line 200, ../sass/app.scss */
 .sub-title {
   letter-spacing: 1px;
   font-size: 23px;
@@ -8909,13 +8933,13 @@ header {
   transition: all 0.1s ease-in-out;
 }
 @media (min-width: 768px) {
-  /* line 179, ../sass/app.scss */
+  /* line 200, ../sass/app.scss */
   .sub-title {
     font-size: 30px;
   }
 }
 
-/* line 191, ../sass/app.scss */
+/* line 212, ../sass/app.scss */
 .description {
   font-size: 16px;
   -webkit-transition: all 0.1s ease-in-out;
@@ -8925,7 +8949,7 @@ header {
   transition: all 0.1s ease-in-out;
 }
 
-/* line 196, ../sass/app.scss */
+/* line 217, ../sass/app.scss */
 .reset-btn {
   position: fixed;
   bottom: 15px;
@@ -8938,17 +8962,17 @@ header {
   border: 2px solid #00ca3e;
   background-color: #71e271;
   text-align: center;
-  color: #524231;
+  color: #502d07;
   font-size: 17px;
   z-index: 1;
   cursor: pointer;
   font-weight: bold;
 }
-/* line 214, ../sass/app.scss */
+/* line 235, ../sass/app.scss */
 .reset-btn:active {
   opacity: .8;
 }
-/* line 218, ../sass/app.scss */
+/* line 239, ../sass/app.scss */
 .reset-btn i {
   margin: 0;
   padding: 0;
@@ -8956,13 +8980,13 @@ header {
   top: 2px;
 }
 
-/* line 226, ../sass/app.scss */
+/* line 247, ../sass/app.scss */
 .gmap {
   width: 100%;
   height: 35%;
 }
 
-/* line 231, ../sass/app.scss */
+/* line 252, ../sass/app.scss */
 .fire-btn {
   position: fixed;
   bottom: 15px;
@@ -8975,18 +8999,18 @@ header {
   background-color: #71e271;
   text-align: center;
   line-height: 44px;
-  color: #524231;
+  color: #502d07;
   font-size: 19px;
   z-index: 1;
   cursor: pointer;
   font-weight: bold;
 }
-/* line 249, ../sass/app.scss */
+/* line 270, ../sass/app.scss */
 .fire-btn:active {
   opacity: .8;
 }
 
-/* line 254, ../sass/app.scss */
+/* line 275, ../sass/app.scss */
 .fire-btn-shadow {
   position: fixed;
   bottom: 15px;
@@ -9002,7 +9026,7 @@ header {
   box-shadow: 0px 8px 36px -9px black;
 }
 
-/* line 269, ../sass/app.scss */
+/* line 290, ../sass/app.scss */
 .reset-btn-shadow {
   position: fixed;
   bottom: 15px;
@@ -9019,17 +9043,17 @@ header {
   box-shadow: 0px 8px 36px -9px black;
 }
 
-/* line 285, ../sass/app.scss */
+/* line 306, ../sass/app.scss */
 .center {
   margin: 0 auto;
 }
 
-/* line 289, ../sass/app.scss */
+/* line 310, ../sass/app.scss */
 .text-center {
   text-align: center;
 }
 
-/* line 294, ../sass/app.scss */
+/* line 315, ../sass/app.scss */
 .park-nav ul {
   list-style: none;
   margin: 0;
@@ -9037,14 +9061,14 @@ header {
   overflow: hidden;
 }
 @media (min-width: 768px) {
-  /* line 294, ../sass/app.scss */
+  /* line 315, ../sass/app.scss */
   .park-nav ul {
     width: 640px;
     margin: 0 auto;
     text-align: center;
   }
 }
-/* line 307, ../sass/app.scss */
+/* line 328, ../sass/app.scss */
 .park-nav ul li {
   position: relative;
   height: 150px;
@@ -9052,7 +9076,7 @@ header {
   padding: 5px 0 5px 0;
 }
 @media (min-width: 768px) {
-  /* line 307, ../sass/app.scss */
+  /* line 328, ../sass/app.scss */
   .park-nav ul li {
     width: 318px;
     /*account for padding*/
@@ -9061,7 +9085,7 @@ header {
     display: inline-block;
   }
 }
-/* line 321, ../sass/app.scss */
+/* line 342, ../sass/app.scss */
 .park-nav ul li p {
   position: absolute;
   bottom: 0;
@@ -9079,21 +9103,21 @@ header {
   transition: all 0.2s ease-out;
 }
 @media (min-width: 768px) {
-  /* line 337, ../sass/app.scss */
+  /* line 358, ../sass/app.scss */
   .park-nav ul li p {
     padding: 5px 40px 5px 10%;
   }
-  /* line 341, ../sass/app.scss */
+  /* line 362, ../sass/app.scss */
   .park-nav ul li:nth-child(1n) {
     text-align: right;
   }
-  /* line 344, ../sass/app.scss */
+  /* line 365, ../sass/app.scss */
   .park-nav ul li:nth-child(2n) {
     text-align: left;
   }
 }
 
-/* line 352, ../sass/app.scss */
+/* line 373, ../sass/app.scss */
 .li-bg {
   -webkit-transition: all 0.6s ease-in-out;
   -moz-transition: all 0.6s ease-in-out;
@@ -9102,20 +9126,20 @@ header {
   transition: all 0.6s ease-in-out;
   opacity: .9;
 }
-/* line 355, ../sass/app.scss */
+/* line 376, ../sass/app.scss */
 .li-bg:hover {
   cursor: pointer;
 }
-/* line 358, ../sass/app.scss */
+/* line 379, ../sass/app.scss */
 .li-bg:hover .li-overlay {
   background-color: #fff;
 }
-/* line 362, ../sass/app.scss */
+/* line 383, ../sass/app.scss */
 .li-bg:active {
   opacity: 1;
 }
 
-/* line 367, ../sass/app.scss */
+/* line 388, ../sass/app.scss */
 .li-overlay {
   position: absolute;
   top: 72.5%;
@@ -9131,7 +9155,7 @@ header {
   transition: all 0.5s ease-in-out;
 }
 
-/* line 378, ../sass/app.scss */
+/* line 399, ../sass/app.scss */
 .li-overlay-white {
   position: absolute;
   top: 72%;
@@ -9141,25 +9165,25 @@ header {
   background-color: #fff;
 }
 
-/* line 387, ../sass/app.scss */
+/* line 408, ../sass/app.scss */
 .park-list-container {
   position: relative;
   width: 100%;
 }
 
-/* line 392, ../sass/app.scss */
+/* line 413, ../sass/app.scss */
 .park-distance-ul {
   overflow: hidden;
   width: 100%;
   height: 56px;
 }
 @media all and (min-width: 768px) {
-  /* line 392, ../sass/app.scss */
+  /* line 413, ../sass/app.scss */
   .park-distance-ul {
     height: auto;
   }
 }
-/* line 401, ../sass/app.scss */
+/* line 422, ../sass/app.scss */
 .park-distance-ul ul {
   margin: 0;
   padding: 0;
@@ -9168,18 +9192,19 @@ header {
   padding-bottom: 17px;
 }
 @media all and (min-width: 768px) {
-  /* line 401, ../sass/app.scss */
+  /* line 422, ../sass/app.scss */
   .park-distance-ul ul {
     padding-bottom: 0;
   }
 }
-/* line 412, ../sass/app.scss */
+/* line 433, ../sass/app.scss */
 .park-distance-ul ul li {
   list-style: none;
   position: relative;
   display: inline-block;
   height: 55px;
-  width: 55px;
+  width: auto;
+  padding: 0 10px;
   border: 4px solid #71e271;
   margin: 0 1px;
   font-size: 0;
@@ -9193,14 +9218,13 @@ header {
   transition: all 1s ease-in-out;
 }
 @media all and (min-width: 768px) {
-  /* line 412, ../sass/app.scss */
+  /* line 433, ../sass/app.scss */
   .park-distance-ul ul li {
     height: 75px;
-    width: 75px;
     border: 6px solid #71e271;
   }
 }
-/* line 432, ../sass/app.scss */
+/* line 453, ../sass/app.scss */
 .park-distance-ul ul li:hover {
   opacity: .7;
   -webkit-transition: all 0.1s ease-in-out;
@@ -9209,7 +9233,7 @@ header {
   -o-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
 }
-/* line 437, ../sass/app.scss */
+/* line 458, ../sass/app.scss */
 .park-distance-ul ul li .number {
   font-size: 20px;
   display: inline-block;
@@ -9217,20 +9241,26 @@ header {
   top: 50%;
   left: 0;
   margin-top: -14px;
-  color: #524231;
+  color: #502d07;
 }
 
-/* line 450, ../sass/app.scss */
+/* line 471, ../sass/app.scss */
 .park-selected {
   opacity: .5;
 }
 
-/* line 454, ../sass/app.scss */
+/* line 475, ../sass/app.scss */
 .park-selected-official {
-  border: 6px solid #524231 !important;
+  border: 4px solid #502d07 !important;
+}
+@media all and (min-width: 768px) {
+  /* line 475, ../sass/app.scss */
+  .park-selected-official {
+    border: 6px solid #502d07 !important;
+  }
 }
 
-/* line 458, ../sass/app.scss */
+/* line 483, ../sass/app.scss */
 .number-overlay {
   font-size: 62px;
   display: inline-block;
@@ -9239,8 +9269,8 @@ header {
   left: 0;
   right: 0;
   bottom: 0;
-  margin-top: -44px;
-  color: #524231;
+  margin-top: -45px;
+  color: #502d07;
   opacity: 0;
   -webkit-transform: scale(0.5, 0.5);
   -moz-transform: scale(0.5, 0.5);
@@ -9249,23 +9279,23 @@ header {
   transform: scale(0.5, 0.5);
 }
 
-/* line 472, ../sass/app.scss */
+/* line 497, ../sass/app.scss */
 .park-info-cont {
   width: 100%;
   position: relative;
 }
-/* line 476, ../sass/app.scss */
+/* line 501, ../sass/app.scss */
 .park-info-cont ul {
-  padding: 5px 15px;
+  padding: 0 15px;
   margin: 0;
-  color: #524231;
+  color: #502d07;
 }
-/* line 481, ../sass/app.scss */
+/* line 506, ../sass/app.scss */
 .park-info-cont ul li {
   display: block;
 }
 
-/* line 488, ../sass/app.scss */
+/* line 513, ../sass/app.scss */
 .park-images-ul {
   overflow: hidden;
   width: 100%;
@@ -9273,12 +9303,12 @@ header {
   position: relative;
 }
 @media all and (min-width: 768px) {
-  /* line 488, ../sass/app.scss */
+  /* line 513, ../sass/app.scss */
   .park-images-ul {
     height: auto;
   }
 }
-/* line 498, ../sass/app.scss */
+/* line 523, ../sass/app.scss */
 .park-images-ul ul {
   margin: 0;
   padding: 0;
@@ -9288,28 +9318,28 @@ header {
   height: 148px;
 }
 @media all and (min-width: 768px) {
-  /* line 498, ../sass/app.scss */
+  /* line 523, ../sass/app.scss */
   .park-images-ul ul {
     padding-bottom: 0;
   }
 }
-/* line 510, ../sass/app.scss */
+/* line 535, ../sass/app.scss */
 .park-images-ul ul li {
   display: inline-block;
   padding-right: 5px;
 }
-/* line 514, ../sass/app.scss */
+/* line 539, ../sass/app.scss */
 .park-images-ul ul li img {
   height: 95px;
 }
 @media all and (min-width: 768px) {
-  /* line 514, ../sass/app.scss */
+  /* line 539, ../sass/app.scss */
   .park-images-ul ul li img {
     height: 125px;
   }
 }
 
-/* line 524, ../sass/app.scss */
+/* line 549, ../sass/app.scss */
 .svg-check {
   display: none;
   position: absolute;
@@ -9324,7 +9354,7 @@ header {
   -webkit-border-radius: 50%;
 }
 
-/* line 538, ../sass/app.scss */
+/* line 563, ../sass/app.scss */
 .li-gradient-overlay {
   position: absolute;
   top: 0;
@@ -9333,7 +9363,7 @@ header {
   bottom: 0;
 }
 
-/* line 546, ../sass/app.scss */
+/* line 571, ../sass/app.scss */
 .chosen-park-list {
   position: fixed;
   top: auto;
@@ -9352,33 +9382,33 @@ header {
   opacity: .9;
 }
 @media (min-width: 768px) {
-  /* line 546, ../sass/app.scss */
+  /* line 571, ../sass/app.scss */
   .chosen-park-list {
     right: 2%;
   }
 }
-/* line 568, ../sass/app.scss */
+/* line 593, ../sass/app.scss */
 .chosen-park-list ul {
   padding: 0;
   margin: 0;
   padding: 10px 10px 10px 40px;
 }
 @media (min-width: 768px) {
-  /* line 568, ../sass/app.scss */
+  /* line 593, ../sass/app.scss */
   .chosen-park-list ul {
     padding: 10px 0 10px 40px;
   }
 }
-/* line 578, ../sass/app.scss */
+/* line 603, ../sass/app.scss */
 .chosen-park-list ul li {
   text-align: right;
   list-style: none;
-  color: #524231;
+  color: #502d07;
   cursor: pointer;
   padding: 4px 0;
 }
 
-/* line 588, ../sass/app.scss */
+/* line 613, ../sass/app.scss */
 .loading-screen {
   position: fixed;
   top: 0;
@@ -9393,7 +9423,7 @@ header {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-/* line 598, ../sass/app.scss */
+/* line 623, ../sass/app.scss */
 .loading-screen .overlay {
   position: fixed;
   top: 0;
@@ -9403,7 +9433,7 @@ header {
   background-color: white;
   opacity: .8;
 }
-/* line 608, ../sass/app.scss */
+/* line 633, ../sass/app.scss */
 .loading-screen .contents {
   position: fixed;
   top: 50%;
@@ -9415,29 +9445,29 @@ header {
   -o-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
 }
-/* line 615, ../sass/app.scss */
+/* line 640, ../sass/app.scss */
 .loading-screen .contents svg {
   width: 60px;
   height: auto;
 }
-/* line 620, ../sass/app.scss */
+/* line 645, ../sass/app.scss */
 .loading-screen .contents .text {
   height: 20px;
   position: relative;
   margin: 10px auto;
 }
-/* line 625, ../sass/app.scss */
+/* line 650, ../sass/app.scss */
 .loading-screen .contents .text p {
   font-size: 14px;
   padding: 0;
   margin: 0;
   position: absolute;
   top: 50%;
-  color: #524231;
+  color: #502d07;
   opacity: 0;
 }
 
-/* line 639, ../sass/app.scss */
+/* line 664, ../sass/app.scss */
 .loading-screen-small {
   position: absolute;
   top: 0;
@@ -9452,7 +9482,7 @@ header {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-/* line 649, ../sass/app.scss */
+/* line 674, ../sass/app.scss */
 .loading-screen-small .overlay {
   position: absolute;
   top: 0;
@@ -9462,7 +9492,7 @@ header {
   background-color: white;
   opacity: .8;
 }
-/* line 659, ../sass/app.scss */
+/* line 684, ../sass/app.scss */
 .loading-screen-small svg {
   width: 35px;
   height: auto;
@@ -9477,14 +9507,14 @@ header {
   transform: translateX(-50%) translateY(-50%);
 }
 
-/* line 670, ../sass/app.scss */
+/* line 695, ../sass/app.scss */
 .fa-styling {
   color: #71e271;
   width: 16px;
   text-align: center;
 }
 
-/* line 676, ../sass/app.scss */
+/* line 701, ../sass/app.scss */
 footer {
   color: #71e271;
   font-size: 10px;
@@ -9492,7 +9522,7 @@ footer {
 }
 
 /* TRANSITION SPECIFIC */
-/* line 688, ../sass/app.scss */
+/* line 713, ../sass/app.scss */
 .ani-left {
   -webkit-transform: translate3d(-2000px, 0, 0);
   -moz-transform: translate3d(-2000px, 0, 0);
@@ -9502,7 +9532,7 @@ footer {
   opacity: 0;
 }
 
-/* line 693, ../sass/app.scss */
+/* line 718, ../sass/app.scss */
 .ani-right {
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
@@ -9512,17 +9542,17 @@ footer {
   opacity: 1;
 }
 
-/* line 698, ../sass/app.scss */
+/* line 723, ../sass/app.scss */
 .ani-fadeOut {
   opacity: 0;
 }
 
-/* line 702, ../sass/app.scss */
+/* line 727, ../sass/app.scss */
 .ani-fadeIn {
   opacity: 1;
 }
 
-/* line 706, ../sass/app.scss */
+/* line 731, ../sass/app.scss */
 .ani-fadeOutZindex {
   opacity: 0;
   z-index: -1;
@@ -9533,7 +9563,7 @@ footer {
   animation: zoomAniNoRotateRev 0.3s forwards;
 }
 
-/* line 712, ../sass/app.scss */
+/* line 737, ../sass/app.scss */
 .ani-fadeInZindex {
   opacity: 1;
   z-index: 1;
@@ -9545,7 +9575,7 @@ footer {
 }
 
 /* ANIMATION SPECIFIC */
-/* line 724, ../sass/app.scss */
+/* line 749, ../sass/app.scss */
 .zoom-check {
   -webkit-animation: zoomAni 0.8s forwards;
   -moz-animation: zoomAni 0.8s forwards;
@@ -9554,7 +9584,7 @@ footer {
   animation: zoomAni 0.8s forwards;
 }
 
-/* line 728, ../sass/app.scss */
+/* line 753, ../sass/app.scss */
 .zoom-check-reverse {
   -webkit-animation: zoomAniRev 0.5s forwards;
   -moz-animation: zoomAniRev 0.5s forwards;
@@ -9563,7 +9593,7 @@ footer {
   animation: zoomAniRev 0.5s forwards;
 }
 
-/* line 732, ../sass/app.scss */
+/* line 757, ../sass/app.scss */
 .zoom-check-shadow {
   -webkit-animation: zoomAniRevShadow 0.5s forwards;
   -moz-animation: zoomAniRevShadow 0.5s forwards;
@@ -9572,7 +9602,7 @@ footer {
   animation: zoomAniRevShadow 0.5s forwards;
 }
 
-/* line 736, ../sass/app.scss */
+/* line 761, ../sass/app.scss */
 .zoom-check-shadow-reverse {
   -webkit-animation: zoomAniRevShadowRev 0.5s forwards;
   -moz-animation: zoomAniRevShadowRev 0.5s forwards;
@@ -9581,7 +9611,7 @@ footer {
   animation: zoomAniRevShadowRev 0.5s forwards;
 }
 
-/* line 740, ../sass/app.scss */
+/* line 765, ../sass/app.scss */
 .slide-center {
   -webkit-animation: slideAni 0.5s forwards;
   -moz-animation: slideAni 0.5s forwards;
@@ -9590,7 +9620,7 @@ footer {
   animation: slideAni 0.5s forwards;
 }
 
-/* line 744, ../sass/app.scss */
+/* line 769, ../sass/app.scss */
 .number-zoom {
   -webkit-animation: numberZoomAni 1s forwards;
   -moz-animation: numberZoomAni 1s forwards;
@@ -9603,7 +9633,7 @@ footer {
   animation-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
 
-/* line 752, ../sass/app.scss */
+/* line 777, ../sass/app.scss */
 .fade-in-and-up {
   -webkit-animation: fadeInAndUp 1s forwards;
   -moz-animation: fadeInAndUp 1s forwards;
@@ -9612,7 +9642,7 @@ footer {
   animation: fadeInAndUp 1s forwards;
 }
 
-/* line 756, ../sass/app.scss */
+/* line 781, ../sass/app.scss */
 .li-click {
   -webkit-animation: liButtonClick 0.5s forwards;
   -moz-animation: liButtonClick 0.5s forwards;
@@ -9625,7 +9655,7 @@ footer {
   transform: perspective(200px) translateZ(0);
 }
 
-/* line 764, ../sass/app.scss */
+/* line 789, ../sass/app.scss */
 .li-click-text {
   -webkit-animation: liButtonClickText 1s forwards;
   -moz-animation: liButtonClickText 1s forwards;
@@ -9642,7 +9672,7 @@ footer {
   transform: perspective(200px) translateZ(0);
 }
 
-/* line 776, ../sass/app.scss */
+/* line 801, ../sass/app.scss */
 .top-leaf {
   fill: #71E271;
   -webkit-animation: colorSwapToBrightGreen 0.5s infinite;
@@ -9652,7 +9682,7 @@ footer {
   animation: colorSwapToBrightGreen 0.5s infinite;
 }
 
-/* line 781, ../sass/app.scss */
+/* line 806, ../sass/app.scss */
 .bottom-leaf {
   fill: #00CA3E;
   -webkit-animation: colorSwapToDarkGreen 0.5s infinite;
@@ -9662,7 +9692,7 @@ footer {
   animation: colorSwapToDarkGreen 0.5s infinite;
 }
 
-/* line 786, ../sass/app.scss */
+/* line 811, ../sass/app.scss */
 .top-leaf-slow {
   fill: #71E271;
   -webkit-animation: colorSwapToBrightGreenSlow 2.7s infinite;
@@ -9672,7 +9702,7 @@ footer {
   animation: colorSwapToBrightGreenSlow 2.7s infinite;
 }
 
-/* line 791, ../sass/app.scss */
+/* line 816, ../sass/app.scss */
 .bottom-leaf-slow {
   fill: #00CA3E;
   -webkit-animation: colorSwapToDarkGreenSlow 2.7s infinite;
@@ -9682,7 +9712,7 @@ footer {
   animation: colorSwapToDarkGreenSlow 2.7s infinite;
 }
 
-/* line 796, ../sass/app.scss */
+/* line 821, ../sass/app.scss */
 .loading-text {
   -webkit-animation: loadingText 0.9s infinite;
   -moz-animation: loadingText 0.9s infinite;
